style.css
*,
::after,
::before {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    user-select: none;
}

header {
    display: flex;
    height: 80px;
    width: 100%;
    justify-content: center;
    background-color: #007CC2;
    padding: 10px;
}

body {
    background-color: #7FB6F6;
    overflow-x: hidden;
}

.soleil {
    position: absolute;
    right: 0;
    margin: 30px;
    width: 130px;
    z-index: 0;
}

.cards {
    position: relative;
    display: grid;
    align-items: center;
    justify-content: center;
    grid-template-columns: 350px 350px;
    margin-top: 40px;
    gap: 12px;
    z-index: 3;
}


.card {
    position: relative;
    display: flex;
    height: 350px;
    width: 300px;
    border-radius: 16px;
    margin: 10px;
}

.card.george {
    background: linear-gradient(180deg, #007CC2 0%, #DB87B9 100%);
}

.card.peppa {
    background: linear-gradient(180deg, #F1635D 0%, #DB87B9 100%);
}

.card.maman {
    background: linear-gradient(180deg, #F3AF89 0%, #DB87B9 100%);
}

.card.papa {
    background: linear-gradient(180deg, #77C7C1 0%, #DB87B9 100%);
}

.card-layer {
    display: flex;
    margin: 10px;
    background-color: aliceblue;
    border-radius: 10px;
}

.card-layer2 {
    margin: 8px;
    border: 10px #7FB6F6 solid;
    border-radius: 10px;
}

.card-name {
    display: flex;
    margin: 10px;
}

.card-name img {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    left: 6px;
    border-radius: 40px;
    background: none;
    cursor: pointer;
    transition: scale 0.2s ease-in-out;
}

.card-name img:hover {
    scale: 1.1;
}

.card-name img:active {
    scale: 1.2;
}

.card-name h1 {
    font-size: 20px;
    font-weight: 600;
    font-family: Jua, sans-serif;
}

.card.george .card-name h1 {
    color: #236DA1;
}

.card.peppa .card-name h1 {
    color: #EBA1C6;
}

.card.maman .card-name h1 {
    color: #F3AF89;
}

.card.papa .card-name h1 {
    color: #77C7C1;
}

.card-description {
    position: relative;
    display: flex;
    width: 60%;
    margin: 10px;
}

.card-description p {
    font-size: 14px;
    font-family: Jost, sans-serif;
}

.personnage {
    position: absolute;
    top: 70px;
    right: -60px;
}

.herbe {
    position: fixed;
    bottom: 0px;
    width: 100%;
    z-index: -1;
}

audio {
    display: none;
}

@media (max-width: 780px) {
    header img {
        width: 100vw;
    }

    .cards {
        display: flex;
        flex-direction: column;
        width: 350px;
        margin: 10px auto;
    }

    .card {
        width: 270px;
        height: 315px;
    }

    .herbe {
        display: none;
    }

    .card p {
        font-size: 12px;
    }

    .personnage {
        width: 173px;
    }

    .card.maman .personnage {
        width: 190px;
    }
}

